--- a/my-react-app/package.json
+++ b/my-react-app/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "firebase": "^9.17.1",
     "react": "^18.2.0",
@@ -16,6 +17,7 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
+  "proxy": "https://localhost:7200/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
